<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/prefs_screen"
    android:key="preferencescreen" >

    <PreferenceCategory android:title="Settings" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/prefs_autosave_key"
            android:summary="Please enable for using history function"
            android:title="Enable SD Card" />
 
    </PreferenceCategory>

    <PreferenceCategory android:title="When a barcode is found" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/prefs_scan_beep_key"
            android:title="Beep" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/prefs_scan_vibrate_key"
            android:title="Vibrate" />
    </PreferenceCategory>

</PreferenceScreen>