<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_a"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="65dip"
            android:src="@drawable/logo_s" />

        <RelativeLayout
            android:id="@+id/widget41"
            android:layout_width="fill_parent"
            android:layout_height="100dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/bg_list"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/location"
                android:layout_width="220dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginTop="25dip"
                android:paddingBottom="5dip"
                android:text="@string/deals_magazine_address"
                android:textColor="@color/grey180"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/imgbtn_contactview_map"
                android:layout_width="80px"
                android:layout_height="80px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/icon_building"
                android:text="Show on the Map" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/widget42"
            android:layout_width="fill_parent"
            android:layout_height="80dip"
            android:background="@drawable/bg_list"
            android:orientation="vertical"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <TextView
                android:id="@+id/phone"
                android:layout_width="220dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginTop="20dip"
                android:text="@string/deals_magazine_phone"
                android:textColor="@color/grey180"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/imgbtn_contactview_call"
                android:layout_width="80px"
                android:layout_height="80px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/icon_phone"
                android:text="Show on the Map" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/widget42"
            android:layout_width="fill_parent"
            android:layout_height="80dip"
            android:background="@drawable/bg_list"
            android:orientation="vertical"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <ImageButton
                android:id="@+id/imgbtn_contactview_email"
                android:layout_width="80px"
                android:layout_height="80px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/icon_email"
                android:text="Show on the Map" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="220dip"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dip"
                android:text="@string/deals_magazine_email"
                android:textColor="@color/grey180"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>